@@ -1,10 +1,12 @@
-CHANGES.txt - 2006-05-03
+CHANGES.txt - 2006-05-05
 ------------------------
 
 CHANGES IN CUPS V1.2
 
 	- Documentation updates (STR #1618, STR #1620, STR #1622,
 	  STR #1637)
+	- The scheduler did not decode the backend exit code
+	  properly (STR #1648)
 	- The MacOS X USB backend did not report the 1284 device ID,
 	  nor did it fix device IDs returned by HP printers.
 	- The scheduler started more slowly than 1.1.x with large
